# horizon

./: .gitignore  HACKING.rst  README.rst  build_deb.sh  build_rpm.sh  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
nuage/: customization.py
nuage/api/: neutron.py
nuage/dashboards/project/networks/: __init__.py  views.py  workflows.py
nuage/dashboards/project/routers/: __init__.py  tests.py  views.py
nuage_horizon/: customization.py
nuage_horizon/api/: neutron.py
nuage_horizon/dashboards/admin/networks/: __init__.py  forms.py  tabs.py  urls.py  views.py  workflows.py
nuage_horizon/dashboards/admin/routers/: __init__.py  tabs.py  urls.py
nuage_horizon/dashboards/project/: __init__.py  dashboard.py
nuage_horizon/dashboards/project/access_and_security/: __init__.py  tabs.py  urls.py  views.py
nuage_horizon/dashboards/project/application_domains/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/dashboards/project/application_services/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/dashboards/project/applications/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/dashboards/project/gateway_port_vlans/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/dashboards/project/gateway_vlans/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/dashboards/project/gateways/: __init__.py  panel.py  tables.py  urls.py  views.py
nuage_horizon/static/css/: nuage.css  nuage.scss
nuage_horizon/static/js/: NuageLinkedSelect.js
nuage_horizon/templates/: _page_header.html  base.html
(+146 files in other folders)
