[metadata]
name = nuage_horizon
summary = Horizon Extension for Nuage Networks
description-file =
    README.rst
author = Alcatel-Lucent
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    openstack_dashboard.hooks.setup_hook

[files]
packages =
    nuage_horizon