[metadata]
name = nuage-openstack-horizon
summary = Horizon Extension for Nuage Networks
description-file =
    README.rst
author = Nokia
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
license = ASL 2.0
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    nuage_horizon
